samples/_failures_safe/1761449518_bed108_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6d1eb2e.c: In function ‘main’:
./samples/SAFE/__tmp_d6d1eb2e.c:138:5: error: expected declaration or statement at end of input
  138 |     }
      |     ^
